--- a/src/components/GraphViewer.css
+++ b/src/components/GraphViewer.css
@@ -1,6 +1,7 @@
 .graph-viewer {
   display: flex;
   flex-direction: column;
+  height: 100vh;
   width: 100%;
 }
 
@@ -40,6 +41,17 @@
   padding: 0.3rem;
 }
 
+.graph-viewer-sidebar {
+  display: flex;
+  flex-direction: column;
+}
+
+@media (max-width: 35rem) {
+  .graph-viewer-sidebar {
+    display: none;
+  }
+}
+
 .graph-viewer-input {
   background-color: #333;
   color: #ccc;
@@ -47,7 +59,7 @@
   display: flex;
   align-items: center;
 
-  border-radius: 0.3rem;
+  border-radius: 0.3rem 0.3rem 0 0;
 
   margin: 0.5rem 0.5rem 0 0.5rem;
   padding: 0.3rem;
@@ -64,12 +76,19 @@
   margin-left: 0.1rem;
 }
 
+.graph-viewer-body {
+  display: flex;
+  flex-direction: row;
+  flex: 1;
+}
+
 .graph-viewer-list {
   background-color: #222;
-  border-radius: 0.3rem;
-  margin: 0.5rem;
-  padding: 0.3rem 0.5rem;
-  flex: 1;
+  border-radius: 0 0 0.3rem 0.3rem;
+  margin: 0 0.5rem;
+  padding: 0.3rem 0;
+  height: auto;
+  width: 15rem;
 }
 
 .graph-viewer-list-item {
@@ -77,11 +96,31 @@
   flex-direction: row;
   align-items: center;
 
-  margin: 0.2rem 0;
+  padding: 0.2rem;
 }
 
-.graph-viewer-list-item-delete {
-  margin-left: 0.1rem;
+.graph-viewer-list-item:hover {
+  background-color: #444;
+}
+
+.graph-viewer-list-item-icon {
+  cursor: pointer;
+}
+
+.graph-viewer-list-item-text {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  flex: 1;
+
+  cursor: pointer;
+
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+.graph-viewer-list-item-icon {
+  margin-right: 0.1rem;
 }
 
 .graph-viewer-list-empty {
