--- a/src/components/Node.css
+++ b/src/components/Node.css
@@ -1,7 +1,7 @@
 .node {
   display: flex;
   flex-direction: column;
-  margin-top: 0.4rem;
+  margin-top: 0.2rem;
 }
 
 .node-content {
@@ -28,7 +28,7 @@
   border-radius: 0.3rem;
   outline: none;
 
-  padding: 0 0.1rem;
+  padding: 0.1rem 0.2rem;
 }
 
 .node-text-red {
